# fuzztooldemo

./: .gitignore  AI_WORKFLOW.md  Anchor.toml  CASE_STUDY.md  DEMO_SCRIPT.md  EVALUATION.md  README.md  presentation-demo.sh
ai-exploration/: AI_EXPLORATION_README.md
ai-exploration/amm/programs/amm/src/: lib.rs
ai-exploration/amm/trident-tests/fuzz_amm_liquidity/: test_fuzz.rs
ai-exploration/amm/trident-tests/fuzz_amm_swap/: test_fuzz.rs
ai-exploration/escrow/programs/escrow/src/: lib.rs
ai-exploration/escrow/trident-tests/fuzz_escrow_cancel/: test_fuzz.rs
ai-exploration/escrow/trident-tests/fuzz_escrow_exchange/: test_fuzz.rs
ai-exploration/nft-mint/programs/nft-mint/src/: lib.rs
ai-exploration/nft-mint/trident-tests/fuzz_nft_supply/: test_fuzz.rs
ai-exploration/nft-mint/trident-tests/fuzz_nft_transfer/: test_fuzz.rs
ai-exploration/vault-fixed/programs/fuzztooldemo/src/: lib.rs
primitives/: README.md
primitives/escrow_mini/: README.md  fuzz_escrow_mini.rs  program_lib.rs
programs/fuzztooldemo/: Cargo.toml
programs/fuzztooldemo/src/: lib.rs
programs/fuzztooldemo/tests/: vault_security.rs
sbf-artifacts/: fuzztooldemo-keypair.json
scripts/: demo-trident-paths.sh
tests/: fuzztooldemo.ts
trident-tests/: Cargo.toml  Trident.toml
trident-tests/fuzz_0/: fuzz_accounts.rs  types.rs
trident-tests/fuzz_acpi/: test_fuzz.rs
trident-tests/fuzz_ib/: test_fuzz.rs
trident-tests/fuzz_mkc/: test_fuzz.rs
trident-tests/fuzz_moc/: test_fuzz.rs
trident-tests/fuzz_msc/: test_fuzz.rs
trident-tests/src/: lib.rs
