[workspace]

[package]
name = "fuzz_tests"
version = "0.1.0"
description = "Created with Trident"
edition = "2021"

[dependencies]
anchor-lang = "0.32.1"
borsh = "1.5.3"
fuzztooldemo = { path = "../programs/fuzztooldemo", features = ["no-entrypoint"] }

[dependencies.trident-fuzz]
version = "0.12.0"

[[bin]]
name = "fuzz_0"
path = "fuzz_0/test_fuzz.rs"

[[bin]]
name = "fuzz_msc"
path = "fuzz_msc/test_fuzz.rs"

[[bin]]
name = "fuzz_moc"
path = "fuzz_moc/test_fuzz.rs"

[[bin]]
name = "fuzz_acpi"
path = "fuzz_acpi/test_fuzz.rs"

[[bin]]
name = "fuzz_mkc"
path = "fuzz_mkc/test_fuzz.rs"

[[bin]]
name = "fuzz_ib"
path = "fuzz_ib/test_fuzz.rs"
